tests/ui/type-alias-impl-trait/type-alias-impl-trait-unconstrained-lifetime.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/type-alias-impl-trait-unconstrained-lifetime.rs:10:6
   |
LL | impl<'a, I: Iterator<Item = i32>> Trait for (i32, I) {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a, I: Iterator<Item = i32>> Trait for (i32, I) {
LL + impl<, I: Iterator<Item = i32>> Trait for (i32, I) {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
